Tema4/expr.output
Grammar

    0 $accept: E $end

    1 E: E '+' T
    2  | E '-' T
    3  | T

    4 T: T '*' F
    5  | T '/' F
    6  | F

    7 F: '(' E ')'
    8  | '-' '(' E ')'
    9  | ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 7 8
    ')' (41) 7 8
    '*' (42) 4
    '+' (43) 1
    '-' (45) 2 8
    '/' (47) 5
    error (256)
    ID (258) 9


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    E (11)
        on left: 1 2 3
        on right: 0 1 2 7 8
    T (12)
        on left: 4 5 6
        on right: 1 2 3 4 5
    F (13)
        on left: 7 8 9
        on right: 4 5 6


State 0

    0 $accept: • E $end

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    E  go to state 4
    T  go to state 5
    F  go to state 6


State 1

    9 F: ID •

    $default  reduce using rule 9 (F)


State 2

    8 F: '-' • '(' E ')'

    '('  shift, and go to state 7


State 3

    7 F: '(' • E ')'

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    E  go to state 8
    T  go to state 5
    F  go to state 6


State 4

    0 $accept: E • $end
    1 E: E • '+' T
    2  | E • '-' T

    $end  shift, and go to state 9
    '+'   shift, and go to state 10
    '-'   shift, and go to state 11


State 5

    3 E: T •
    4 T: T • '*' F
    5  | T • '/' F

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 3 (E)


State 6

    6 T: F •

    $default  reduce using rule 6 (T)


State 7

    8 F: '-' '(' • E ')'

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    E  go to state 14
    T  go to state 5
    F  go to state 6


State 8

    1 E: E • '+' T
    2  | E • '-' T
    7 F: '(' E • ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 15


State 9

    0 $accept: E $end •

    $default  accept


State 10

    1 E: E '+' • T

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    T  go to state 16
    F  go to state 6


State 11

    2 E: E '-' • T

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    T  go to state 17
    F  go to state 6


State 12

    4 T: T '*' • F

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    F  go to state 18


State 13

    5 T: T '/' • F

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    F  go to state 19


State 14

    1 E: E • '+' T
    2  | E • '-' T
    8 F: '-' '(' E • ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 20


State 15

    7 F: '(' E ')' •

    $default  reduce using rule 7 (F)


State 16

    1 E: E '+' T •
    4 T: T • '*' F
    5  | T • '/' F

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 1 (E)


State 17

    2 E: E '-' T •
    4 T: T • '*' F
    5  | T • '/' F

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 2 (E)


State 18

    4 T: T '*' F •

    $default  reduce using rule 4 (T)


State 19

    5 T: T '/' F •

    $default  reduce using rule 5 (T)


State 20

    8 F: '-' '(' E ')' •

    $default  reduce using rule 8 (F)
